--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <img src="img1.jpeg" alt="">
         </div>
         <i class="fas fa-times close-icon"></i>
+        <input type="text" class="hello">
     </div>
 </body>
 <script src="main.js"></script>
